fixing white space

--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
-html {margin: 0;padding: 0;}
+html {
+	margin: 0;
+	padding: 0;
+	overflow-x: hidden;
+}
 svg {
-	aspect-ratio: 9/16;
 	object-fit: cover;
 	display: block;
+	min-height: 100vh;
 }
 
 g {transition: all .2s ease;}
